[gd_scene load_steps=10 format=3 uid="uid://bmujw01w7k14k"]

[ext_resource type="Script" uid="uid://dq0bamfxrn8ap" path="res://addons/hyh.digression/editor/nodes/EditorRandomNode.gd" id="1"]
[ext_resource type="Theme" uid="uid://1cbvg04l0616" path="res://addons/hyh.digression/editor/nodes/styles/node_theme.tres" id="1_w7up8"]
[ext_resource type="Texture2D" uid="uid://ddkdwrnkby3ww" path="res://addons/hyh.digression/icons/icon_add.svg" id="2"]
[ext_resource type="StyleBox" uid="uid://cy2mtyhieui8q" path="res://addons/hyh.digression/editor/nodes/styles/control_node.tres" id="2_yl5ej"]
[ext_resource type="PackedScene" uid="uid://dk0btqqtgur07" path="res://addons/hyh.digression/editor/branches/EditorRandomValue.tscn" id="3"]
[ext_resource type="StyleBox" uid="uid://dt03i76r27rvt" path="res://addons/hyh.digression/editor/nodes/styles/control_node_selected.tres" id="3_4pbor"]
[ext_resource type="StyleBox" uid="uid://bfb7qelnfi6bj" path="res://addons/hyh.digression/editor/nodes/styles/control_node_titlebar.tres" id="4_7m3no"]
[ext_resource type="StyleBox" uid="uid://cg1qeowcx5883" path="res://addons/hyh.digression/editor/nodes/styles/control_node_titlebar_selected.tres" id="5_vtskd"]
[ext_resource type="PackedScene" uid="uid://co4le7crf047l" path="res://addons/hyh.digression/editor/controls/drag/DragTargetHSeparator.tscn" id="8_inhcp"]

[node name="EditorRandomNode" type="GraphNode"]
offset_right = 500.0
offset_bottom = 164.0
theme = ExtResource("1_w7up8")
theme_override_styles/panel = ExtResource("2_yl5ej")
theme_override_styles/panel_selected = ExtResource("3_4pbor")
theme_override_styles/titlebar = ExtResource("4_7m3no")
theme_override_styles/titlebar_selected = ExtResource("5_vtskd")
title = "Random"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(0.94902, 0.94902, 0.94902, 0.882353)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(0.94902, 0.94902, 0.94902, 0.882353)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(0.94902, 0.94902, 0.94902, 0.882353)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = true
slot/2/right_type = 0
slot/2/right_color = Color(0.94902, 0.94902, 0.94902, 0.882353)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VB" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VB"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VB/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Default"

[node name="AddBranchButtonOld" type="Button" parent="MarginContainer/VB/HBoxContainer"]
visible = false
layout_mode = 2
icon = ExtResource("2")
flat = true

[node name="DragTargetHSeparator" parent="MarginContainer/VB" instance=ExtResource("8_inhcp")]
layout_mode = 2
accepted_classes = Array[int]([4])
accepted_type_restriction = 0

[node name="RandomValue" parent="." instance=ExtResource("3")]
layout_mode = 2

[node name="RandomValue2" parent="." instance=ExtResource("3")]
layout_mode = 2

[node name="AddBranchContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="AddBranchButton" type="Button" parent="AddBranchContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Add Branch"
icon = ExtResource("2")
flat = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="MarginContainer/VB/HBoxContainer/AddBranchButtonOld" to="." method="_on_add_branch_button_pressed"]
[connection signal="dropped" from="MarginContainer/VB/DragTargetHSeparator" to="." method="_on_drag_target_dropped"]
[connection signal="dropped_after" from="RandomValue" to="." method="_on_branch_dropped_after"]
[connection signal="modified" from="RandomValue" to="." method="_on_branch_modified" binds= [0]]
[connection signal="preparing_to_change_parent" from="RandomValue" to="." method="_on_branch_preparing_to_change_parent"]
[connection signal="remove_requested" from="RandomValue" to="." method="_on_branch_remove_requested" binds= [0]]
[connection signal="dropped_after" from="RandomValue2" to="." method="_on_branch_dropped_after"]
[connection signal="modified" from="RandomValue2" to="." method="_on_branch_modified" binds= [1]]
[connection signal="preparing_to_change_parent" from="RandomValue2" to="." method="_on_branch_preparing_to_change_parent"]
[connection signal="remove_requested" from="RandomValue2" to="." method="_on_branch_remove_requested" binds= [1]]
[connection signal="pressed" from="AddBranchContainer/AddBranchButton" to="." method="_on_add_branch_button_pressed"]
